<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/menu_1"
        android:layout_width="92sp"
        android:layout_height="wrap_content"
        android:text="@string/menu_1"
        android:gravity="center"
        android:textSize="30sp"
        android:background="#3366CC"/>
    <TextView
        android:id="@+id/menu_2"
        android:layout_width="92sp"
        android:layout_height="wrap_content"
        android:text="@string/menu_2"
        android:gravity="center"
        android:textSize="30sp"
        android:background="#3366CC"/>
    <TextView
        android:id="@+id/menu_4"
        android:layout_width="92sp"
        android:layout_height="wrap_content"
        android:text="@string/menu_5"
        android:gravity="center"
        android:textSize="30sp"
        android:background="#3366CC"/>
    <TextView
        android:id="@+id/menu_5"
        android:layout_width="92sp"
        android:layout_height="wrap_content"
        android:text="@string/menu_4"
        android:gravity="center"
        android:textSize="30sp"
        android:background="#3366CC"/>
</LinearLayout>