<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/menu"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/menu"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/title"
        android:layout_weight="20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/quiet"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/quiet"
        android:textSize="25sp"/>
</LinearLayout>