<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title_background">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/title_layout" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aa000000" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/title_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_1"
            android:textSize="20sp"/>
        <TextView
            android:gravity="center"
            android:layout_weight="5"
            android:id="@+id/title_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_2"
            android:textSize="20sp"/>
        <TextView
            android:gravity="center"
            android:layout_weight="3"
            android:id="@+id/title_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_3"
            android:textSize="20sp"/>
        <TextView
            android:gravity="center"
            android:layout_weight="3"
            android:id="@+id/title_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_4"
            android:textSize="20sp"/>
        <TextView
            android:gravity="center"
            android:layout_weight="2"
            android:id="@+id/title_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_5"
            android:textSize="20sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aa000000" />
    <LinearLayout
        android:layout_weight="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/listview_layout"/>
    </LinearLayout>
</LinearLayout>